# trt-se-resnext

./: .gitignore  CMakeLists.txt  README.md  tf_sample.py  trt_sample.py
data/: img.ppm  ones.ppm  orange.ppm  panda.ppm  preprocess.py
trt-se-resnext/: CMakeLists.txt  common.cpp  common.h  main.cpp  resnext.cpp  resnext.h
verification/: tf_sample.py  trt_sample.py
